[package]
name = "chefi"
version = "0.1.0"
authors = ["Cole Mickens <cole.mickens@gmail.com>"]

[dependencies]
clap = "^2.26"
error-chain = "^0.11.0-rc.2"
futures = "^0.1"
iron = "^0.5"
log = "^0.3"
mount = "^0.3"
nix = "^0.9"
rand = "^0.3"
slog = "^2.0"
sloggers = "^0.2"
staticfile = "^0.4"
tokio = "^0.0"
tokio-io = "^0.1"
tokio-core = "^0.1"
