[package]
name = "chefi"
version = "0.1.0"
authors = ["Cole Mickens <cole.mickens@gmail.com>"]

[dependencies]
clap = "^2.26"
error-chain = "^0.11.0-rc.2"
futures = "^0.1"
futures-await = { git = 'https://github.com/alexcrichton/futures-await' }
iron = "^0.5"
log = "^0.3"
mount = "^0.3"
nix = "^0.9"
rand = "^0.3"
slog = "^2.0"
sloggers = "^0.2"
staticfile = "^0.4"
structopt = "^0.1"
structopt-derive = "^0.1"
tokio = "^0.0"
tokio-io = "^0.1"
tokio-core = "^0.1"

[profile.release]
lto = true
