[package]
name = "chefi"
license = "MIT"
version = "0.1.0"
readme = "README.md"
repository = "https://github.com/colemickens/chefi"
authors = ["Cole Mickens <cole.mickens@gmail.com>"]
description = "chefi is a TCP/HTTP-enabled Pastebin"

[dependencies]
error-chain = "^0.11.0"
futures = "^0.1"
iron = "^0.5"
mount = "^0.3"
rand = "^0.3"
slog = "^2.0"
sloggers = "^0.2"
staticfile = "^0.4"
structopt = "^0.1"
structopt-derive = "^0.1"
tokio = "^0.0"
tokio-io = "^0.1"
tokio-core = "^0.1"

[profile.release]
lto = true
